# minishell

./: LICENSE  README.md  pyproject.toml
scripts/: deploy
src/minishell/: __init__.py  minishell.py
