[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

[project]
name = "minishell"
version = "2.0.16"
authors = [
  { name = "y9san9", email = "pypi@y9san9.me" },
]
description = "Bash replacement library for Python"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICENSE"]

[project.urls]
Homepage = "https://github.com/y9san9/minishell"
Issues = "https://github.com/y9san9/minishell/issues"
